--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -1,1 +1,2 @@
-<a href="/tags/{{ . | urlize }}" class="tag" rel="tag">{{ if (i18n . ) }}{{ (i18n . ) }}{{ else }}{{ . }}{{ end }}</a>
+<!-- layouts/partials/tag.html -->
+<a href="{{ .Permalink }}" class="tag" rel="tag" data-count="">{{ if (i18n .Title ) }}{{ (i18n .Title ) }}{{ else }}{{ .Title }}{{ end }}</a>
