Updated icon font

--- a/layouts/partials/gadgets.html
+++ b/layouts/partials/gadgets.html
@@ -1,7 +1,7 @@
 <div class="gadgets">
 	{{ with .NextInSection }}<a id="next" href="{{ .Permalink }}"><span>→</span></a>{{ end }}
 	{{ with .PrevInSection }}<a id="prev" href="{{ .Permalink }}"><span>←</span></a>{{ end }}
-	<a id="scroller" href="#top"><span>↑</span></a>
+	<a id="scroller" href="#top"><span>⇈</span></a>
 	<a id="theme-toggle"><span>◑</span></a>
 </div>
 <script type="text/javascript">
