--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,33 +1,16 @@
 {{- $src := .Page.Resources.GetMatch (printf "*%s*" (path.Base (.Get "src") )) -}}
-{{- /*
-
-internal template:
+<!-- internal template:
 https://github.com/gohugoio/hugo/blob/master/tpl/tplimpl/embedded/templates/shortcodes/figure.html
 
 to try:
 https://dev.to/stereobooster/responsive-images-for-hugo-dn9
 
-https://discourse.gohugo.io/t/simple-image-render-hook-template-for-responsive-images/22464/7
-
-*/ -}}
+https://discourse.gohugo.io/t/simple-image-render-hook-template-for-responsive-images/22464/7 -->
 <figure{{ with .Get "class" }} class="{{ . }}"{{ end }}>
 	{{- if .Get "link" -}}
 		<a href="{{ .Get "link" }}"{{ with .Get "target" }} target="{{ . }}"{{ end }}{{ with .Get "rel" }} rel="{{ . }}"{{ end }}>
-	{{- end }}
-	<img src="
-	{{- if $src -}}
-		{{- $resized := $src.Resize "600x" -}}
-		{{ $resized.RelPermalink }}
-	{{- else -}}
-		{{ .Get "srca"}}
-	{{- end -}}
-	"
-		 {{- if or (.Get "alt") (.Get "caption") }}
-		 alt="{{ with .Get "alt" }}{{ . }}{{ else }}{{ .Get "caption" | markdownify | plainify }}{{ end }}"
-		 {{- end -}}
-		 {{- with .Get "width" }} width="{{ . }}"{{ end -}}
-		 {{- with .Get "height" }} height="{{ . }}"{{ end -}}
-	/> <!-- Closing img tag -->
+	{{- end }}	
+		{{ partial "render-image" (dict "Page" .Page "Destination" $src )}}
 	{{- if .Get "link" }}</a>{{ end -}}
 	{{- if or (or (.Get "title") (.Get "caption")) (.Get "attr") -}}
 		<figcaption>
