--- a/layouts/shortcodes/marginalia.html
+++ b/layouts/shortcodes/marginalia.html
@@ -1,3 +1,3 @@
 {{- $class := (.Get "class") -}}
 {{- $title := (.Get "title") -}}
-<aside class="marginalia {{ with $class }}{{ . }}{{ end }}" title="{{ with $title }}{{ . }}{{ end }}">{{ .Inner }}</aside>
+<aside class="marginalia {{ with $class }}{{ . }}{{ end }}" title="{{ with $title }}{{ . }}{{ end }}">{{ .Inner | safeHTML | markdownify }}</aside>
