--- a/layouts/shortcodes/marginalia.html
+++ b/layouts/shortcodes/marginalia.html
@@ -1,3 +1,6 @@
 {{- $class := (.Get "class") -}}
 {{- $title := (.Get "title") -}}
-<aside class="marginalia {{ with $class }}{{ . }}{{ end }}" title="{{ with $title }}{{ . }}{{ end }}">{{ .Inner | safeHTML | markdownify }}</aside>
+<aside class="marginalia{{ with $class }} {{ . }}{{ end }}" title="{{ with $title }}{{ . }}{{ end }}">
+	{{ .Inner | safeHTML }}
+</aside>
+<!-- see issue with block markdownify https://github.com/gohugoio/hugo/issues/5975 -->
