--- a/layouts/shortcodes/gallery.html
+++ b/layouts/shortcodes/gallery.html
@@ -1,10 +1,7 @@
 <!--
 based on https://github.com/liwenyip/hugo-easy-gallery/ and edits form awein
 -->
-<!-- count how many times we've called this shortcode; load the css if it's the first time -->
-{{- if not ($.Page.Scratch.Get "figurecount") }}<!--<link rel="stylesheet" href="/css/hugo-easy-gallery.css" />-->{{ end }}
-{{- $.Page.Scratch.Add "figurecount" 1 }}
-<div class="gallery caption-position-{{ with .Get "caption-position" | default "bottom" }}{{.}}{{end}} caption-effect-{{ with .Get "caption-effect" | default "slide" }}{{.}}{{end}} hover-effect-{{ with .Get "hover-effect" | default "zoom" }}{{.}}{{end}} {{ if ne (.Get "hover-transition") "none" }}hover-transition{{end}}" itemscope itemtype="http://schema.org/ImageGallery">
+<div class="gallery{{ with .Get "class" }} {{.}}{{end}}" {{ with .Get "style" }}style="{{ . }}"{{ end }} itemscope itemtype="http://schema.org/ImageGallery" data-current="1">
 	{{- with (.Get "dir") -}}
 		<!-- If a directory was specified, generate figures for all of the images in the directory -->
 		{{- $files := $.Page.Resources.Match (path.Join . "/*.{gif,jpg,jpeg,tiff,png,bmp}") }}
