--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -343,7 +343,7 @@ button, .button, .tag {
 
 figcaption, small, table,
 .entry-content blockquote {
-	font-size: var(--s-1);
+	font-size: var(--s-2);
 }
 
 .katex,
@@ -450,6 +450,7 @@ figure img {
 }
 
 figcaption {
+	margin-top: calc(var(--line-height)/4);
 	text-align: center;
 }
 
@@ -2697,7 +2698,7 @@ embeds
 gallery
 --------------------------------------------------------------*/
 
-.gallery {
+/*.gallery {
 	position: relative;
 	height: 50vh;
 	margin: 6rem 3rem;
@@ -2723,10 +2724,11 @@ gallery
 	counter-increment: items;
 
 	transition: transform .3s;
+	transform: var(--gallery-transform);
 }
 
 .gallery figure:first-child {
-	z-index: 1; /* make the first image display first */
+	z-index: 1;
 }
 
 .gallery figcaption {
@@ -2774,8 +2776,158 @@ gallery
 .gallery .top img {
 	cursor: e-resize;
 	background: rgb(var(--page-color));
-	/*border: 4px solid rgb(var(--page-color));*/
+}*/
+
+
+
+/*.gallery figure,*/
+.gallery {	
+	/*outline: 2px dashed red;*/
 }
+
+
+.gallery {
+	position: relative;
+	margin: var(--gutter-height) auto;
+
+	column-count: 2;
+	column-gap: var(--gutter-width);
+	counter-reset: items;
+}
+
+.gallery figure {
+	counter-increment: items;
+
+	transition: transform .3s;
+}
+
+.gallery figure:first-child {
+	z-index: 1;
+}
+
+.gallery figcaption {
+	/*transition: all .3s .3s;*/
+}
+
+.gallery img {
+	width: 100%;
+	margin: 0 auto;
+
+	cursor: pointer;
+	mix-blend-mode: normal;
+
+	transform-origin: center;
+	transition: transform .3s 1s;
+}
+
+.gallery img:hover {
+	transition-delay: 0s;
+}
+
+.gallery {
+	column-count: 2;
+	column-gap: var(--gutter-width);
+}
+
+.gallery.spread,
+.gallery.shuffled {
+	position: relative;
+	margin: calc(2*var(--gutter-height)) auto;
+	columns: initial;
+}
+
+.gallery.shuffled {
+	--gallery-height: 70vh;
+
+	height: var(--gallery-height);
+}
+
+.gallery.spread:after,
+.gallery.shuffled:after {
+	content: attr(data-current) '/' counter(items);
+	display: block;
+	position: absolute;
+	top: calc(-1.5 * var(--gutter-height));
+	right: 0;
+
+	font-size: var(--s-2);
+}
+
+.gallery.shuffled figure {
+	position: absolute;
+	top: 0;
+	margin: 0;
+
+	transform-origin: top left;
+	transform: translate(calc(1.33rem * var(--rand-x)), calc(1.33rem * var(--rand-y))) rotate(calc(1deg * var(--rand-deg)));
+}
+
+.gallery.spread figure img,
+.gallery.shuffled figure img {
+	max-height: var(--gallery-height);
+	width: auto;
+
+	outline: 1px solid rgba(var(--text-color), 0.2);
+}
+
+.gallery.spread figure:hover img,
+.gallery.shuffled figure:hover img {
+	outline: 1px solid rgba(var(--text-color), 0.3);
+}
+
+.gallery.spread figure.top img,
+.gallery.shuffled figure.top img {
+	background: rgb(var(--page-color));
+	cursor: e-resize;
+	transition-delay: 0s;
+
+	box-shadow: 0 4px 12px 4px rgba(var(--text-color), 0.5);
+}
+
+.gallery.spread figcaption,
+.gallery.shuffled figcaption {
+	position: absolute;
+	top: calc(-1.5 * var(--gutter-height));
+	left: 0;
+	margin: 0;
+
+	opacity: 0;
+	transform: translate(calc(-1.33rem * var(--rand-x)), calc(-1.33rem * var(--rand-y))) rotate(calc(-1deg * var(--rand-deg)));
+	transition: all .3s;
+}
+
+.gallery.spread figure.top figcaption,
+.gallery.shuffled figure.top figcaption {
+	opacity: 1;
+}
+
+.gallery.spread {
+	width: calc(100% - 10%);
+}
+
+.gallery.spread figure {
+	position: relative;
+	display: inline-block;
+	width: 30%;
+	margin-right: -10%;
+	/*transform: rotate(calc(-1deg * var(--rand-deg)));*/
+	transform: rotate(2deg);
+}
+
+.gallery.spread figure:hover,
+.gallery.spread figure.top {
+	transform: scale(1.1);
+	z-index: 100;
+}
+
+.gallery.spread figcaption {
+	/*transform: rotate(calc(1deg * var(--rand-deg)));*/
+}
+
+.gallery.no-caption figcaption {
+	visibility: hidden;
+}
+
 
 
 /*--------------------------------------------------------------
